[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interface/Styleboxes/stylebox_menu.tres" type="StyleBox" id=1]
[ext_resource path="res://Interface/Options.gd" type="Script" id=2]
[ext_resource path="res://Interface/Themes/theme_ui.tres" type="Theme" id=3]
[ext_resource path="res://Interface/Themes/theme_title.tres" type="Theme" id=4]
[ext_resource path="res://Interface/Styleboxes/stylebox_button_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://Interface/Styleboxes/stylebox_button_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Interface/Styleboxes/stylebox_button.tres" type="StyleBox" id=7]

[node name="OptionsMenu" type="CanvasLayer"]

[node name="Options" type="Control" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="Options"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Options"]
margin_left = 384.0
margin_top = 184.0
margin_right = 896.0
margin_bottom = 544.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsHeader" type="Label" parent="Options"]
margin_left = 528.0
margin_top = 200.0
margin_right = 740.0
margin_bottom = 264.0
theme = ExtResource( 4 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraOption" type="Label" parent="Options"]
margin_left = 408.0
margin_top = 288.0
margin_right = 584.0
margin_bottom = 306.0
theme = ExtResource( 3 )
text = "Camera Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraSpeedValue" type="Label" parent="Options"]
margin_left = 712.0
margin_top = 288.0
margin_right = 888.0
margin_bottom = 306.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeOption" type="Label" parent="Options"]
margin_left = 408.0
margin_top = 336.0
margin_right = 584.0
margin_bottom = 354.0
theme = ExtResource( 3 )
text = "Game Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeValue" type="Label" parent="Options"]
margin_left = 712.0
margin_top = 336.0
margin_right = 888.0
margin_bottom = 354.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraSpeed" type="HSlider" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -72.0
margin_right = 56.0
margin_bottom = -56.0
min_value = 1.0
max_value = 25.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameVolume" type="HSlider" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 56.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnToGame" type="Button" parent="Options"]
margin_left = 552.0
margin_top = 464.0
margin_right = 712.0
margin_bottom = 520.0
theme = ExtResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 1 )
text = "Back to Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ready" from="Options" to="Options" method="_on_Options_ready"]
[connection signal="value_changed" from="Options/CameraSpeed" to="Options" method="_on_CameraSpeed_value_changed"]
[connection signal="value_changed" from="Options/GameVolume" to="Options" method="_on_GameVolume_value_changed"]
[connection signal="pressed" from="Options/ReturnToGame" to="Options" method="_on_ReturnToGame_pressed"]
